log/runtime.log
2026-07-02 09:08:19,355 | INFO | root | Runtime log started.
2026-07-02 09:08:19,356 | INFO | root | Runtime log path: C:\Users\ATLAS\AppData\Local\EngineerTools\logs\runtime.log
2026-07-02 09:08:19,356 | INFO | root | Engineer Tools startup requested.
2026-07-02 09:08:19,356 | INFO | root | Python executable: C:\Users\ATLAS\AppData\Local\EngineerTools\.venv\Scripts\pythonw.exe
2026-07-02 09:08:19,356 | INFO | root | Python argv: ['C:\\Users\\ATLAS\\AppData\\Local\\EngineerTools\\src\\engineers_tools\\main.py']
2026-07-02 09:08:19,880 | INFO | root | interaction_ui_patch: shared icon and control patches installed
2026-07-02 09:08:19,910 | INFO | root | interaction_ui_patch: engineering workspace patches installed
2026-07-02 09:08:19,910 | INFO | root | engineering_export_patch: installed
2026-07-02 09:08:19,910 | INFO | root | engineering_workspace_finalize_patch: installed
2026-07-02 09:08:19,910 | INFO | root | engineering_zoom_print_patch: installed
2026-07-02 09:08:19,911 | INFO | root | engineering_print_setup_hotfix: shared yellow arrow styles installed
2026-07-02 09:08:19,911 | INFO | root | engineering_print_setup_hotfix: installed version=direct-print-14
2026-07-02 09:08:19,911 | INFO | root | engineering_print_setup_final_patch: installed version=direct-print-final-2
2026-07-02 09:08:19,911 | INFO | root | engineering_properties_patch: print setup Apply button disabled
2026-07-02 09:08:19,911 | INFO | root | engineering_properties_patch: installed version=properties-settings-1
2026-07-02 09:08:19,911 | INFO | root | engineering_ui_small_fixes_patch: unified grid/render pipeline installed version=ui-small-fixes-4
2026-07-02 09:08:19,911 | INFO | root | engineering_ui_small_fixes_patch: compact cursor and startbar pointer installed version=ui-small-fixes-4
2026-07-02 09:08:19,911 | INFO | root | engineering_ui_small_fixes_patch: layer icons installed version=ui-small-fixes-4
2026-07-02 09:08:19,912 | INFO | root | engineering_ui_small_fixes_patch: empty right properties panel installed version=ui-small-fixes-4
2026-07-02 09:08:19,912 | INFO | root | engineering_ui_small_fixes_patch: installed version=ui-small-fixes-4
2026-07-02 09:08:19,912 | INFO | root | engineering_window_geometry_patch: F8 shortcut registered
2026-07-02 09:08:19,912 | INFO | root | engineering_window_geometry_patch: installed version=window-geometry-3
2026-07-02 09:08:19,912 | INFO | root | engineering_fixed_page_rotation_patch: installed version=fixed-page-resize-rotation-2
2026-07-02 09:08:19,912 | INFO | root | engineering_fixed_viewport_patch: installed version=fixed-viewport-v5
2026-07-02 09:08:19,913 | INFO | root | engineering_last_mile_patch: installed version=last-mile-2
2026-07-02 09:08:19,913 | INFO | root | engineering_text_editor_patch: installed version=text-editor-priority-2
2026-07-02 09:08:20,645 | INFO | root | Launcher shown.
2026-07-02 09:08:22,469 | CRITICAL | root | Uncaught exception
Traceback (most recent call last):
  File "C:\Users\ATLAS\AppData\Local\EngineerTools\src\engineers_tools\app\controller.py", line 37, in show_module
    window = self._create_module_window(module)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ATLAS\AppData\Local\EngineerTools\src\engineers_tools\app\controller.py", line 62, in _create_module_window
    create_window = self._load_module_entry_point(module.entry_point)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ATLAS\AppData\Local\EngineerTools\src\engineers_tools\app\controller.py", line 67, in _load_module_entry_point
    module_object = import_module(module_path)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ATLAS\AppData\Local\Programs\Python\Python311\Lib\importlib\__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\Users\ATLAS\AppData\Local\EngineerTools\modules\mechanics_dynamics_statics\module_entry.py", line 31, in <module>
    from .text_line_math_symbols_patch import apply_text_line_math_symbols_patch
  File "C:\Users\ATLAS\AppData\Local\EngineerTools\modules\mechanics_dynamics_statics\text_line_math_symbols_patch.py", line 111
    )
    ^
SyntaxError: f-string: single '}' is not allowed
